WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55475
Web Inspector: InjectedScript.setPropertyValue doesn't work
https://bugs.webkit.org/show_bug.cgi?id=55475
Summary
Web Inspector: InjectedScript.setPropertyValue doesn't work
Ilya Tikhonovsky
Reported
2011-03-01 09:23:53 PST
%subj%
Attachments
[patch] initial version
(1.35 KB, patch)
2011-03-01 09:25 PST
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2011-03-01 09:25:55 PST
Created
attachment 84237
[details]
[patch] initial version
Ilya Tikhonovsky
Comment 2
2011-03-01 09:28:54 PST
Comment on
attachment 84237
[details]
[patch] initial version Clearing flags on attachment: 84237 Committed
r80005
: <
http://trac.webkit.org/changeset/80005
>
Ilya Tikhonovsky
Comment 3
2011-03-01 09:29:02 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2011-03-01 11:44:30 PST
http://trac.webkit.org/changeset/80005
might have broken GTK Linux 32-bit Release The following tests are not passing: http/tests/appcache/empty-manifest.html http/tests/appcache/foreign-iframe-main.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug