2011-03-01  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: InjectedScript.setPropertyValue doesn't work.
        https://bugs.webkit.org/show_bug.cgi?id=55475

        * inspector/InjectedScript.cpp:
        (WebCore::InjectedScript::setPropertyValue):

Canonical link: https://commits.webkit.org/69902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80005 268f45cc-cd09-0410-ab3c-d52691b4dbfc